# Natural-Language-to-Code-Generation

./: .gitignore  EXAMPLES.md  LICENSE  README.md  create_eos_data.py  dataset_generator.py  pyproject.toml  requirements.txt  robot_demo.py  to_step_list.py  train_robot.py
docs/: API.md  TRAINING.md
examples/: generate_custom_dataset.py  quick_start.py
