[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Robat-LoRA"
version = "0.1.0"
description = "LoRA fine-tuning for natural language robot programming"
requires-python = ">=3.9"

dependencies = [
    # Core ML libraries
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "peft>=0.6.0",
    
    # Data generation
    "openai>=1.3.0",
    
    # Demo interface
    "gradio>=4.0.0",
    
    # Utilities
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]